--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>The1SX</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      background-color: #e5e5e5;
+      color: #111;
+      font-family: Inter, Helvetica, sans-serif;
+      text-align: center;
+      padding: 60px 20px;
+    }
+    img {
+      max-width: 300px;
+      margin-bottom: 40px;
+    }
+    h1 {
+      font-size: 2em;
+      margin: 0;
+    }
+    p {
+      font-size: 1.2em;
+      max-width: 500px;
+      margin: 20px auto;
+    }
+    .tagline {
+      font-weight: 500;
+      color: #6ba998;
+    }
+  </style>
+</head>
+<body>
+  <img src="logo.png" alt="The1SX Logo">
+  <h1>The1SX</h1>
+</body>
+</html>
 
