--- a/index.html
+++ b/index.html
@@ -3,37 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>The1SX</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
+    html, body {
+      height: 100%;
+      margin: 0;
       background-color: #e5e5e5;
-      color: #111;
-      font-family: Inter, Helvetica, sans-serif;
-      text-align: center;
-      padding: 60px 20px;
+    }
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     img {
-      max-width: 300px;
-      margin-bottom: 40px;
-    }
-    h1 {
-      font-size: 2em;
-      margin: 0;
-    }
-    p {
-      font-size: 1.2em;
-      max-width: 500px;
-      margin: 20px auto;
-    }
-    .tagline {
-      font-weight: 500;
-      color: #6ba998;
+      max-width: 100%;
+      max-height: 100%;
+      height: auto;
+      width: auto;
+      object-fit: contain;
     }
   </style>
 </head>
 <body>
   <img src="logo.png" alt="The1SX Logo">
-  <h1>The1SX</h1>
 </body>
 </html>
-
