--- a/index.html
+++ b/index.html
@@ -8,23 +8,11 @@
     html, body {
       height: 100%;
       margin: 0;
-      background-color: #e5e5e5;
-    }
-    body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    img {
-      max-width: 100%;
-      max-height: 100%;
-      height: auto;
-      width: auto;
-      object-fit: contain;
+      background: #e5e5e5 url('logo.png') no-repeat center center;
+      background-size: cover;
     }
   </style>
 </head>
 <body>
-  <img src="logo.png">
 </body>
 </html>
