--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
-      height: 100%;
       margin: 0;
-      background: #e5e5e5 url('logo.png') no-repeat center center;
-      background-size: cover;
+      padding: 0;
+      height: 100%;
+      background-color: #e5e5e5;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    img {
+      max-width: 90vw;
+      max-height: 90vh;
+      width: auto;
+      height: auto;
     }
   </style>
 </head>
 <body>
+  <img src="logo.png">
 </body>
 </html>
