--- a/index.html
+++ b/index.html
@@ -2,28 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>The1SX</title>
+  <title>The 1SX</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
       height: 100%;
-      background-color: #e5e5e5;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    img {
-      max-width: 90vw;
-      max-height: 90vh;
-      width: auto;
-      height: auto;
+      margin: 0;
+      background: #e5e5e5 url('logo.png') no-repeat center center;
+      background-size: cover;
     }
   </style>
 </head>
 <body>
-  <img src="logo.png">
 </body>
 </html>
